--- a/suivi-fe/backend/package.json
+++ b/suivi-fe/backend/package.json
@@ -17,6 +17,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "pg": "^8.17.1",
     "pptxgenjs": "^4.0.1",
     "xlsx": "^0.18.5"
